--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <title>reveal-md</title>
-    <link rel="stylesheet" href="./dist/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="./docs/dist/theme/league.css" id="theme" />
   </head>
 
-  <body>
+  <body >
     <ul>
       <li>
-        <a href="debugging-animated.html" title="">
+        <a href="./docs/debugging-animated.html" title="">
             debugging-animated.html
         </a>
       </li>
       <li>
-        <a href="debugging2.html" title="">
+        <a href="./docs/debugging2.html" title="">
             debugging2.html
         </a>
       </li>
       <li>
-        <a href="fullstack-curriculum-part1.html" title="">
+        <a href="./docs/fullstack-curriculum-part1.html" title="">
             fullstack-curriculum-part1.html
         </a>
       </li>
       <li>
-        <a href="portfolio.html" title="">
+        <a href="./docs/portfolio.html" title="">
             portfolio.html
         </a>
       </li>
       <li>
-        <a href="task-manager.html" title="">
+        <a href="./docs/task-manager.html" title="">
             task-manager.html
         </a>
       </li>
       <li>
-        <a href="user-authentication.html" title="">
+        <a href="./docs/user-authentication.html" title="">
             user-authentication.html
         </a>
       </li>
