--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>reveal-md</title>
-    <link rel="stylesheet" href="./docs/dist/theme/league.css" id="theme" />
+    <link rel="stylesheet" href="./docs/dist/theme/black.css" id="theme" />
   </head>
 
-  <body >
+  <body>
     <ul>
       <li>
         <a href="./docs/debugging-animated.html" title="">
