--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>reveal-md</title>
+    <title>LiftOff Learning</title>
     <link rel="stylesheet" href="./dist/theme/black.css" id="theme" />
   </head>
 
